# mono-slam

./: .gitignore  CMakeLists.txt  NOTICE  README.md  TODO  package.xml
cmake/: FindLibConfig++.cmake
conf/: conf_kinect.cfg~
data/: test.dae
reference/: Sympy_monoslam_jacobians_1.ipynb
ros_pkg/conf/: conf.cfg~  conf_firewire.cfg~
ros_pkg/data/: camera.blend  camera.ply  camera_model.stl  test.ply  untitled.ply
ros_pkg/src/: Patch.hpp~  vslamRansac.cpp~  vslamRansac.hpp~
src/: CMakeLists.txt  ConfigVSLAM.cpp  ConfigVSLAM.cpp~  ConfigVSLAM.h  ConfigVSLAM.h~  Patch.cpp  Patch.cpp~  Patch.hpp  RosVSLAMRansac.cpp  RosVSLAMRansac.hpp  camModel.cpp  camModel.hpp  libblur.cpp  monoslam_ransac.cpp  monoslam_ransac.cpp~  utils.hpp  vslamRansac.cpp  vslamRansac.hpp
src/example/: main.cpp
src/examples/: live.cpp  main.cpp  test.cpp
src/include/: vslamRansac.hpp
src/lib/: ConfigVSLAM.cpp  ConfigVSLAM.h  Patch.cpp  Patch.hpp  camModel.cpp  camModel.hpp  libblur.cpp  libblur.h  utils.cpp  utils.hpp  vslamRansac.cpp  vslamRansac.hpp
